working on the client DSL
